# ZoBuilder-bot

./: .env.example  Dockerfile  auth_service.py  bot.py  config.py  database.py  main.py  pyproject.toml  start.sh
